# rak-mcps

./: README.md
proxmox/: README.md  pyproject.toml
proxmox/deploy/: install.sh  proxmox-mcp.env.example  proxmox-mcp.service
proxmox/docs/: 01-proxmox-setup.md  02-tailscale-setup.md  03-claude-desktop.md
proxmox/src/: config.py  pve_client.py  server.py
proxmox/src/tools/: _safety.py  backups.py  cluster.py  firewall.py  lxc.py  network.py  nodes.py  snapshots.py  storage.py  tasks.py  users.py  vms.py
