[project]
name = "proxmox-mcp"
version = "0.1.0"
description = "MCP server for comprehensive Proxmox VE cluster management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ragha" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "proxmoxer>=2.0.1",
    "requests>=2.32.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxmox_mcp"]
